--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,8 +18,8 @@ cache:
     - venv/
 
 before_script:
-  - apt-get update
-  - apt-get install -y ffmpeg
+ # - apt-get update
+ # - apt-get install -y ffmpeg
   - python -V  # Print out python version for debugging
   - pip3 install virtualenv
   - virtualenv venv
@@ -40,7 +40,7 @@ Prerun_Setup:
 Code_Runner:
   stage: test
   script:
-    - pip3 install -r requirements.txt
+ #   - pip3 install -r requirements.txt
     - echo "TELEGRAM_TOKEN=CHANGE_ME!"
     - echo "FFMPEG_THREADS=2"
     - echo "FFMPEG_PRESET=ultrafast"
