--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,6 +40,7 @@ Prerun_Setup:
 Code_Runner:
   stage: test
   script:
+    - source venv/bin/activate
  #   - pip3 install -r requirements.txt
     - echo "TELEGRAM_TOKEN=CHANGE_ME!"
     - echo "FFMPEG_THREADS=2"
