--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,7 +44,7 @@ Code_Runner:
   script:
     - source venv/bin/activate
  #   - pip3 install -r requirements.txt
-    - echo "TELEGRAM_TOKEN=CHANGE_ME!"
+    - TELEGRAM_TOKEN=CI_CD
     - echo "FFMPEG_THREADS=2"
     - echo "FFMPEG_PRESET=ultrafast"
     - ./startup.sh
