--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,10 @@
+stages:
+    - prerun_setup
+    - test
+    - build
+    - deploy
+
+
 # Official language image. Look for the different tagged releases at:
 # https://hub.docker.com/r/library/python/tags/
 image: python:latest
@@ -20,23 +27,19 @@ cache:
 before_script:
  # - apt-get update
  # - apt-get install -y ffmpeg
+  - docker info
   - python -V  # Print out python version for debugging
   - pip3 install virtualenv
   - virtualenv venv
   - source venv/bin/activate
-  - pip3 install -r requirements.txt
 
 
-build-job:
-  stage: build
+configuring_python:
+  stage: prerun_setup
   script:
-    - echo "Hello, $GITLAB_USER_LOGIN!"
-
-Prerun_Setup:
-  stage: build
-  script:
-    - echo "PreRun"
-    #- pip3 install -r requirements.txt
+    - echo "PreRun Setup"
+    - source venv/bin/activate
+    - pip3 install -r requirements.txt
 
 
 Code_Runner:
@@ -45,6 +48,10 @@ Code_Runner:
     - source venv/bin/activate
     - ./bot.py
 
+build-job:
+  stage: build
+  script:
+    - echo "Hello, $GITLAB_USER_LOGIN!"
 
 
 deploy-prod:
