--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,6 @@ cache:
 before_script:
  # - apt-get update
  # - apt-get install -y ffmpeg
-  - docker info
   - python -V  # Print out python version for debugging
   - pip3 install virtualenv
   - virtualenv venv
@@ -48,10 +47,18 @@ Code_Runner:
     - source venv/bin/activate
     - ./bot.py
 
+
 build-job:
-  stage: build
-  script:
-    - echo "Hello, $GITLAB_USER_LOGIN!"
+    stage: build
+    image:
+        name: gcr.io/kaniko-project/executor:debug
+        entrypoint: [""]
+    script:
+            - mkdir -p /kaniko/.docker
+            - echo "{\"auths\":{\"$CI_REGISTRY\":{\"username\":\"$CI_REGISTRY_USER\",\"password\":\"$CI_REGISTRY_PASSWORD\"}}}" > / kaniko/.docker/config.json
+            - /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/Dockerfile --destination $CI_REGISTRY_IMAGE:$CI_COMMIT_TAG
+    rules:
+        - if: $CI_COMMIT_TAG
 
 
 deploy-prod:
