--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,7 +50,7 @@ Code_Runner:
 Docker_Image_Builder:
   stage: build
   image: registry.seedelmann.ch/kalabint/dockerx:latest
-  entrypoint: [""]
+  entrypoint: ["CMD"]
   script:
     - mkdir -p /kaniko/.docker
     - echo "{\"auths\":{\"$CI_REGISTRY\":{\"username\":\"$CI_REGISTRY_USER\",\"password\":\"$CI_REGISTRY_PASSWORD\"}}}" > / kaniko/.docker/config.json
