--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,6 +48,8 @@ Code_Runner:
     - ./bot.py
 
 Docker_Image_Builder:
+  only: 
+    - pushes
   before_script:
     - echo Hi, resetting bevore_script lines.
   stage: build
@@ -66,3 +68,5 @@ deploy-prod:
   stage: deploy
   script:
     - echo "This job deploys something from the $CI_COMMIT_BRANCH branch."
+
+
