--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,8 +65,17 @@ Docker_Image_Builder:
 
 
 deploy-prod:
+  only:
+    - pushes
   stage: deploy
+  before_script:
+  # Adding environment's variable SSH_PRIVATE_KEY to the SSH client's agent that manages the private keys
+    - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
+    # Create the SSH directory and give it the right permissions
+    - mkdir -p ~/.ssh
+    - chmod 700 ~/.ssh
   script:
-    - echo "This job deploys something from the $CI_COMMIT_BRANCH branch."
-
-
+    # Connecting to the server using SSH and executing commands like pulling updates to the cloned repo
+    - ssh -o StrictHostKeyChecking=kalabint@10.1.1.214 "cd /docker/services/telegram/kala2xBot"
+    # -o StrictHostKeyCheking=no is to disable strict host key checking in SSH
+    - ssh -p StrictHostKeyChecking=kalabint@10.1.1.214 "docker-compose up -d -e $TELEGRAM_TOKEN"
