--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,6 +68,8 @@ deploy-prod:
   stage: deploy
   before_script:
   # Adding environment's variable SSH_PRIVATE_KEY to the SSH client's agent that manages the private keys
+    - apk add openssh-client # Add SSH client for alpine 
+    - eval $(ssh-agent -s) # Run the SSH client 
     - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
     # Create the SSH directory and give it the right permissions
     - mkdir -p ~/.ssh
