--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,8 +48,6 @@ Code_Runner:
     - ./bot.py
 
 Docker_Image_Builder:
-  #only: 
-  #  - pushes
   stage: build
   image:
     name: gcr.io/kaniko-project/executor:debug
@@ -78,4 +76,6 @@ deploy-prod:
     # Connecting to the server using SSH and executing commands like pulling updates to the cloned repo
     - ssh -o StrictHostKeyChecking=kalabint@10.1.1.214 "cd /docker/services/telegram/kala2xBot"
     # -o StrictHostKeyCheking=no is to disable strict host key checking in SSH
-    - ssh -p StrictHostKeyChecking=kalabint@10.1.1.214 "docker-compose up -d -e $TELEGRAM_TOKEN"
+    - ssh -p StrictHostKeyChecking=kalabint@10.1.1.214 "docker-compose up -d -e TELEGRAM_TOKEN=$TELEGRAM_TOKEN"
+#   rules:
+#     - if: $CI_COMMIT_TAG
