--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,8 +31,6 @@ before_script:
   - pip3 install virtualenv
   - virtualenv venv
   - source venv/bin/activate
-  - echo $SSH_PRIVATE_KEY
-  - echo $TELEGRAM_TOKEN
 
 
 configuring_python:
@@ -76,8 +74,8 @@ deploy-prod:
     - chmod 700 ~/.ssh
   script:
     # Connecting to the server using SSH and executing commands like pulling updates to the cloned repo
-    - ssh -o StrictHostKeyChecking=kalabint@10.1.1.214 "cd /docker/services/telegram/kala2xBot"
+    - ssh -o StrictHostKeyChecking=no kalabint@10.1.1.214 "cd /docker/services/telegram/kala2xBot"
     # -o StrictHostKeyCheking=no is to disable strict host key checking in SSH
-    - ssh -p StrictHostKeyChecking=kalabint@10.1.1.214 "docker-compose up -d -e TELEGRAM_TOKEN=$TELEGRAM_TOKEN"
+    - ssh -p StrictHostKeyChecking=no kalabint@10.1.1.214 "docker-compose up -d -e TELEGRAM_TOKEN=$TELEGRAM_TOKEN"
 #   rules:
 #     - if: $CI_COMMIT_TAG
