--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,6 +76,6 @@ deploy-prod:
     # Connecting to the server using SSH and executing commands like pulling updates to the cloned repo
     - ssh -o StrictHostKeyChecking=no kalabint@10.1.1.214 "cd /home/kalabint/docker/services/telegram/kala2xBot"
     # -o StrictHostKeyCheking=no is to disable strict host key checking in SSH
-    - ssh -p StrictHostKeyChecking=no kalabint@10.1.1.214 "docker-compose up -d -e TELEGRAM_TOKEN=$TELEGRAM_TOKEN"
+    - ssh -o StrictHostKeyChecking=no kalabint@10.1.1.214 "docker-compose up -d -e TELEGRAM_TOKEN=$TELEGRAM_TOKEN"
 #   rules:
 #     - if: $CI_COMMIT_TAG
