--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,9 +73,12 @@ deploy-prod:
     - mkdir -p ~/.ssh
     - chmod 700 ~/.ssh
   script:
-    # Connecting to the server using SSH and executing commands like pulling updates to the cloned repo
+    # Connecting to the server using SSH and changing dir
     - ssh -o StrictHostKeyChecking=no kalabint@10.1.1.214 "cd /home/kalabint/docker/services/telegram/kala2xBot"
     # -o StrictHostKeyCheking=no is to disable strict host key checking in SSH
-    - ssh -o StrictHostKeyChecking=no kalabint@10.1.1.214 "docker-compose up -d -e TELEGRAM_TOKEN=$TELEGRAM_TOKEN"
+    - ssh -o StrictHostKeyChecking=no kalabint@10.1.1.214 "echo TELEGRAM_TOKEN=$TELEGRAM_TOKEN2 >>./.env"
+    - ssh -i $SSH_PRIVATE_KEY -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_IP "docker pull $CI_COMMIT_TAG"
+    - ssh -i $SSH_PRIVATE_KEY -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_IP "docker container rm -f kala2xBot_Docker || true"
+    - ssh -i $SSH_PRIVATE_KEY -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_IP "docker run -d -p 80:80 --name kala2xBot_Docker $CI_COMMIT_TAG"
 #   rules:
 #     - if: $CI_COMMIT_TAG
