--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -82,6 +82,6 @@ deploy-prod:
     # - ssh -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_IP "echo TELEGRAM_TOKEN=$TELEGRAM_TOKEN2 >>./.env"
     - ssh -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_IP "docker pull registry.seedelmann.ch/kalabint/webm2mp4:latest"
     - ssh -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_IP "docker container rm -f kala2xBot_Docker || true"
-    - ssh -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_IP "docker run -d --name kala2xBot_Docker registry.seedelmann.ch/kalabint/webm2mp4:latest -e TELEGRAM_TOKEN=$TELEGRAM_TOKEN2"
+    - ssh -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_IP 'docker run -d --name kala2xBot_Docker registry.seedelmann.ch/kalabint/webm2mp4:latest -e TELEGRAM_TOKEN="$TELEGRAM_TOKEN2"'
 #   rules:
 #     - if: $CI_COMMIT_TAG
