--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,13 +75,14 @@ deploy-prod:
     - mkdir -p ~/.ssh
     - chmod 700 ~/.ssh
   script:
-    - echo $TELEGRAM_TOKEN2
-    - export TELEGRAM_TOKEN2
+    # Making ENV TELEGRAM_TOKEN2 available on Remote host
+    - LC_TELEGRAM_TOKEN2=$TELEGRAM_TOKEN2
+    - ssh -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_IP "TELEGRAM_TOKEN2=$LC_TELEGRAM_TOKEN2"
     # Connecting to the server using SSH and changing dir
     - ssh -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_IP "cd /home/kalabint/docker/services/telegram/kala2xBot"
     # -o StrictHostKeyCheking=no is to disable strict host key checking in SSH
     - ssh -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_IP "docker pull registry.seedelmann.ch/kalabint/webm2mp4:latest"
     - ssh -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_IP "docker container rm -f kala2xBot_Docker || true"
-    - ssh -o StrictHostKeyChecking=no -o SendEnv="TELEGRAM_TOKEN2" $SERVER_USER@$SERVER_IP "docker run -d --name kala2xBot_Docker registry.seedelmann.ch/kalabint/webm2mp4:latest -e TELEGRAM_TOKEN=$TELEGRAM_TOKEN2"
+    - ssh -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_IP "docker run -d --name kala2xBot_Docker registry.seedelmann.ch/kalabint/webm2mp4:latest -e TELEGRAM_TOKEN=$TELEGRAM_TOKEN2"
 #   rules:
 #     - if: $CI_COMMIT_TAG
