--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,9 @@
 stages:
+  - deploy
   - prerun_setup
   - test
   - build
-  - deploy
+ # - deploy
 
 
 # Official language image. Look for the different tagged releases at:
@@ -77,7 +78,9 @@ deploy-prod:
   script:
     # Making ENV TELEGRAM_TOKEN2 available on Remote host
     - LC_TELEGRAM_TOKEN2=$TELEGRAM_TOKEN2
+    - echo $LC_TELEGRAM_TOKEN2
     - ssh -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_IP "TELEGRAM_TOKEN2=$LC_TELEGRAM_TOKEN2"
+    - ssh -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_IP "echo $LC_TELEGRAM_TOKEN2"
     # Connecting to the server using SSH and changing dir
     - ssh -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_IP "cd /home/kalabint/docker/services/telegram/kala2xBot"
     # -o StrictHostKeyCheking=no is to disable strict host key checking in SSH
