--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,6 +48,7 @@ Code_Runner:
     - source venv/bin/activate
     - ./startup.sh
     - ls
+    - cat config.json
 
 Docker_Image_Builder:
   before_script:
